# ComputeBnB

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  run.bat  run.sh  run_worker.sh  tailwind.config.js  vite.config.ts
app/: cli.py  main.py
app/models/: messages.py
app/routers/: host.py  hosting.py  jobs.py  workers.py
app/services/: discovery.py  execution.py  host_service.py  hosting.py  system_info.py  worker_client.py
backend/: cli.py  pyproject.toml  run.bat  run.sh  sample_job.py  test.py
backend/app/: main.py
backend/app/models/: messages.py
backend/app/routers/: hosting.py  jobs.py  specs.py  workers.py
backend/app/services/: discovery.py  hosting.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  mockData.ts  sampleProject.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: ResultCard.tsx  StatusBadge.tsx  WorkerCard.tsx
frontend/src/components/ui/: checkbox.tsx  label.tsx  select.tsx
frontend/src/screens/: HostModeScreen.tsx  JobCompleteScreen.tsx  JobExecutionScreen.tsx  SubmitJobScreen.tsx  WorkerListScreen.tsx
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: tauri.conf.json
src/components/: LogViewer.tsx  ResultCard.tsx  StatusBadge.tsx  WorkerCard.tsx
src/screens/: HostModeScreen.tsx  JobCompleteScreen.tsx  JobExecutionScreen.tsx  SubmitJobScreen.tsx  WorkerListScreen.tsx
test/generated_files_project/: main.py
test/ml_benchmark_project/: device.py  main.py  model.py  report.py
test/ml_benchmark_project/benchmarks/: __init__.py  inference.py  matmul.py  training.py
test/sample_python_project/: main.py  requirements.txt
tests/: test_execution_runner.py  test_host_service_roundtrip.py
worker/: test_worker.py
