[project]
name = "computebnb"
version = "0.1.0"
description = "P2P compute sharing on local network"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "docker>=7.0.0",  # for docker python API if needed
    "zipfile36; python_version<'3.7'",  # for zipfile support on older python
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
computebnb = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]
